ds-portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ds-portfolio-app
  name: ds-portfolio-app
  namespace: ds-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ds-portfolio-app
  template:
    metadata:
      labels:
        app: ds-portfolio-app
    spec:
      containers:
      - image: 172.10.30.11:5000/ds-portfolio/ds-portfolio-app:v0.1
        name: ds-portfolio-app
