ds-portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ds-portfolio-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "ds-portfolio.apps.lab3.dslee.lab"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ds-portfolio-app-service
            port:
              number: 80
